--- a/views/lg.jade
+++ b/views/lg.jade
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     .container
-      h3 Hello world!
+      h3 CIP , Check ICO Process
       .bot
     script.
       var deg = -155;
